--- a/apps/templates/home/maps.html
+++ b/apps/templates/home/maps.html
@@ -17,7 +17,7 @@
 {% block javascripts %}
 
 <!--  Google Maps Plugin    -->
-<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE"></script>
+<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCzeSIS3eGlG075uzdMq0_6SQSo99GUAMc"></script>
 <script type="text/javascript">
     $(document).ready(function() {
         // Javascript method's body can be found in assets/js/demos.js
