--- a/apps/templates/home/table.html
+++ b/apps/templates/home/table.html
@@ -28,7 +28,7 @@
                                 <tbody>
                                     <tr>
                                         <td>1</td>
-                                        <td>Dakota Rice</td>
+                                        <td>Tinelio</td>
                                         <td>$36,738</td>
                                         <td>Niger</td>
                                         <td>Oud-Turnhout</td>
