--- a/apps/templates/includes/footer.html
+++ b/apps/templates/includes/footer.html
@@ -5,13 +5,13 @@
                 <ul class="footer-menu">
                     <li>
                         <a target="_blank" 
-                            href="https://appseed.us/admin-dashboards/flask-dashboard-light-bootstrap">
-                            Flask Light Bootstrap
+                            href="#">
+                            Reef
                         </a>
                     </li>
                 </ul>
                 <p class="copyright">
-                    &copy; Creative Tim - coded by AppSeed.
+                    &copy; Reef - By ElectricFish Energy Inc.
                 </p>
             </nav>
         </div>
