--- a/apps/templates/includes/sidebar.html
+++ b/apps/templates/includes/sidebar.html
@@ -1,4 +1,4 @@
-<div class="sidebar" data-image="{{ config.ASSETS_ROOT }}/img/sidebar-5.jpg">
+<div class="sidebar" data-image="{{ config.ASSETS_ROOT }}/img/testbar.png">
     <!--
 Tip 1: You can change the color of the sidebar using: data-color="purple | blue | green | orange | red"
 
@@ -7,7 +7,7 @@ Tip 2: you can also add an image using data-image tag
     <div class="sidebar-wrapper">
         <div class="logo">
             <a href="/" class="simple-text">
-                Flask Light
+                Reef
             </a>
         </div>
         <ul class="nav">
@@ -67,19 +67,19 @@ Tip 2: you can also add an image using data-image tag
                 </a>
             </li>
             
-            <li class="nav-item active active-pro">
+            <!--<li class="nav-item active active-pro">
                 <a class="nav-link active" target="_blank" 
-                   href="https://appseed.us/admin-dashboards/flask-dashboard-material-pro">
+                   href="#">
                     <i class="nc-icon nc-spaceship"></i>
                     <p>PRO Version</p>
                 </a>
-            </li>
+            </li> -->
             {% else %}
             <li class="nav-item active">
                 <a class="nav-link active" target="_blank" 
-                   href="https://appseed.us/admin-dashboards/flask-dashboard-material-pro">
+                   href="#">
                     <i class="nc-icon nc-spaceship"></i>
-                    <p>PRO Version</p>
+                    <p>Register</p>
                 </a>
             </li>
             {% endif %}
