--- a/apps/templates/home/maps.html
+++ b/apps/templates/home/maps.html
@@ -7,7 +7,7 @@
         font-family: "Lato", sans-serif;
     }
     
-    .sidebar {
+    .sidebar1 {
         height: 100%;
         width: 0;
         position: fixed;
@@ -20,7 +20,7 @@
         padding-top: 60px;
     }
     
-    .sidebar a {
+    .sidebar1 a {
         padding: 8px 8px 8px 32px;
         text-decoration: none;
         font-size: 25px;
@@ -29,11 +29,11 @@
         transition: 0.3s;
     }
     
-    .sidebar a:hover {
+    .sidebar1 a:hover {
         color: #f1f1f1;
     }
     
-    .sidebar .closebtn {
+    .sidebar1 .closebtn {
         position: absolute;
         top: 0;
         right: 25px;
@@ -72,7 +72,7 @@
 {% block content %}
 
 <div class="map-container">
-    <div id="mySidebar" class="sidebar">
+    <div id="mySidebar" class="sidebar1">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
         <a href="#">About</a>
         <a href="#">Services</a>
