adding more stuff

--- a/apps/templates/home/index.html
+++ b/apps/templates/home/index.html
@@ -13,19 +13,19 @@
                 <div class="col-md-4">
                     <div class="card ">
                         <div class="card-header ">
-                            <h4 class="card-title">Email Statistics</h4>
-                            <p class="card-category">Last Campaign Performance</p>
+                            <h4 class="card-title">Total Network Energy Dispensed</h4>
+                            <p class="card-category">Live Unit participation</p>
                         </div>
                         <div class="card-body ">
                             <div id="chartPreferences" class="ct-chart ct-perfect-fourth"></div>
                             <div class="legend">
-                                <i class="fa fa-circle text-info"></i> Open
-                                <i class="fa fa-circle text-danger"></i> Bounce
-                                <i class="fa fa-circle text-warning"></i> Unsubscribe
+                                <i class="fa fa-circle text-info"></i> EFHQ01
+                                <i class="fa fa-circle text-danger"></i> EFLA02
+                                <i class="fa fa-circle text-warning"></i> EFSJC03
                             </div>
                             <hr>
                             <div class="stats">
-                                <i class="fa fa-clock-o"></i> Campaign sent 2 days ago
+                                <i class="fa fa-clock-o"></i> Last update 3 minutes ago
                             </div>
                         </div>
                     </div>
@@ -33,7 +33,7 @@
                 <div class="col-md-8">
                     <div class="card ">
                         <div class="card-header ">
-                            <h4 class="card-title">Users Behavior</h4>
+                            <h4 class="card-title">LIVE Unit-to-Grid behavior(kW)</h4>
                             <p class="card-category">24 Hours performance</p>
                         </div>
                         <div class="card-body ">
@@ -41,9 +41,9 @@
                         </div>
                         <div class="card-footer ">
                             <div class="legend">
-                                <i class="fa fa-circle text-info"></i> Open
-                                <i class="fa fa-circle text-danger"></i> Click
-                                <i class="fa fa-circle text-warning"></i> Click Second Time
+                                <i class="fa fa-circle text-info"></i> EFHQ01
+                                <i class="fa fa-circle text-danger"></i> EFLA02
+                                <i class="fa fa-circle text-warning"></i> EFSJC03
                             </div>
                             <hr>
                             <div class="stats">
@@ -57,16 +57,16 @@
                 <div class="col-md-6">
                     <div class="card ">
                         <div class="card-header ">
-                            <h4 class="card-title">2017 Sales</h4>
-                            <p class="card-category">All products including Taxes</p>
+                            <h4 class="card-title">Live Charge Capacity</h4>
+                            <p class="card-category">Monthly per unit(kW)</p>
                         </div>
                         <div class="card-body ">
                             <div id="chartActivity" class="ct-chart"></div>
                         </div>
                         <div class="card-footer ">
                             <div class="legend">
-                                <i class="fa fa-circle text-info"></i> Tesla Model S
-                                <i class="fa fa-circle text-danger"></i> BMW 5 Series
+                                <i class="fa fa-circle text-info"></i> EFHQ01
+                                <i class="fa fa-circle text-danger"></i> EFLA01
                             </div>
                             <hr>
                             <div class="stats">
@@ -75,8 +75,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6">
-                    <div class="card  card-tasks">
+                    <!--<div class="card  card-tasks">
                         <div class="card-header ">
                             <h4 class="card-title">Tasks</h4>
                             <p class="card-category">Backend development</p>
@@ -210,7 +209,7 @@
                                 <i class="now-ui-icons loader_refresh spin"></i> Updated 3 minutes ago
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
