--- a/apps/templates/home/user.html
+++ b/apps/templates/home/user.html
@@ -20,7 +20,7 @@
                                 <div class="row">
                                     <div class="col-md-5 pr-1">
                                         <div class="form-group">
-                                            <label>UserID (disabled)</label>
+                                            <label>UserID</label>
                                             <input type="text" class="form-control" disabled="" placeholder="Company" value="{{ current_user.id }}">
                                         </div>
                                     </div>
@@ -38,7 +38,7 @@
                                     </div>
                                 </div>
                                 <div class="row">
-                                    <div class="col-md-6 pr-1">
+                                    <!--<div class="col-md-6 pr-1">
                                         <div class="form-group">
                                             <label>First Name</label>
                                             <input type="text" class="form-control" placeholder="Company" value="Mike">
@@ -49,18 +49,18 @@
                                             <label>Last Name</label>
                                             <input type="text" class="form-control" placeholder="Last Name" value="Andrew">
                                         </div>
-                                    </div>
+                                    </div>-->
                                 </div>
                                 <div class="row">
-                                    <div class="col-md-12">
+                                    <!--<div class="col-md-12">
                                         <div class="form-group">
                                             <label>Address</label>
                                             <input type="text" class="form-control" placeholder="Home Address" value="Bld Mihail Kogalniceanu, nr. 8 Bl 1, Sc 1, Ap 09">
                                         </div>
-                                    </div>
+                                    </div>-->
                                 </div>
                                 <div class="row">
-                                    <div class="col-md-4 pr-1">
+                                    <!--<div class="col-md-4 pr-1">
                                         <div class="form-group">
                                             <label>City</label>
                                             <input type="text" class="form-control" placeholder="City" value="Mike">
@@ -85,7 +85,7 @@
                                             <label>About Me</label>
                                             <textarea rows="4" cols="80" class="form-control" placeholder="Here can be your description" value="Mike">Lamborghini Mercy, Your chick she so thirsty, I'm in that two seat Lambo.</textarea>
                                         </div>
-                                    </div>
+                                    </div>-->
                                 </div>
                                 <button type="submit" class="btn btn-info btn-fill pull-right">Update Profile</button>
                                 <div class="clearfix"></div>
@@ -93,7 +93,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <!--<div class="col-md-4">
                     <div class="card card-user">
                         <div class="card-image">
                             <img src="https://ununsplash.imgix.net/photo-1431578500526-4d9613015464?fit=crop&fm=jpg&h=300&q=75&w=400" alt="...">
@@ -127,7 +127,7 @@
                             </button>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
