--- a/apps/templates/includes/sidebar.html
+++ b/apps/templates/includes/sidebar.html
@@ -49,6 +49,12 @@ Tip 2: you can also add an image using data-image tag
                     <p>Sales</p>
                 </a>
             </li>
+            <li class="nav-item nav-item {% if 'myunit' in segment %} active {% endif %}">
+                <a class="nav-link" href="/myunit.html">
+                    <i class="nc-icon nc-app"></i>
+                    <p>My Unit(site owner)</p>
+                </a>
+            </li>
            
             <!--<li class="nav-item nav-item {% if 'notif' in segment %} active {% endif %}">
                 <a class="nav-link" href="/notifications.html">
