--- a/apps/templates/includes/navigation.html
+++ b/apps/templates/includes/navigation.html
@@ -11,12 +11,12 @@
                     <div class="collapse navbar-collapse justify-content-end" id="navigation">
                         {% if current_user.is_authenticated %}
                         <ul class="nav navbar-nav mr-auto">
-                            <!--<li class="nav-item">
+                           <!-- <li class="nav-item">
                                 <a href="#" class="nav-link" data-toggle="dropdown">
                                     <i class="nc-icon nc-palette"></i>
-                                    <span class="d-lg-none">Dashboard</span>
+                                    <span class="d-lg-none">{{pagename}}</span>
                                 </a>
-                            </li>-->
+                            </li> -->
                             <!--<li class="dropdown nav-item">
                                 <a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown">
                                     <i class="nc-icon nc-planet"></i>
