--- a/apps/templates/home/maps.html
+++ b/apps/templates/home/maps.html
@@ -15,6 +15,8 @@
         <a id="SOC" href="#"></a>
         <a id="IVTS" href="#"></a>
         <a id="COORD" href="#"></a>
+        <a id="temperature" href="#"></a>
+        
         <!--<div class="row">
             <div class="col-md-8">
                 <div class="card">
