--- a/apps/templates/home/myunit.html
+++ b/apps/templates/home/myunit.html
@@ -5,6 +5,7 @@
 
 <div class="content">
     <div class="container-fluid">
+        <h2>My Unit</h2>
         <div class="row">
             <div class="col-md-3.5">
                 <div class="card ">
@@ -29,15 +30,38 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4">
-                <div class="card ">
-                    <div class="card-header ">
-                        <h4 class="card-title">LIVE Unit-to-Grid behavior(kW)</h4>
-                        <p class="card-category">24 Hours performance</p>
+            <div class="col-md-3.1">
+                <div class="card">
+                    <div class="card-header">
+                        <h4 class="card-title">Operational Status</h4>
+                        <p class="card-category">Live stats</p>
                     </div>
                     <div class="card-body ">
-                        <h1>UNIT DASHBOARD GOES HERE</h1>
+                        <div id="chart_div" style="width: auto; height: auto;"></div>
                        <!--<div id="chartHours" class="ct-chart"></div>-->
+                    </div>
+                    <div class="card-footer ">
+                        <!--<div class="legend">
+                            <i class="fa fa-circle text-info"></i> EFHQ01
+                            <i class="fa fa-circle text-danger"></i> EFLA02
+                            <i class="fa fa-circle text-warning"></i> EFSJC03
+                        </div>-->
+                        <hr>
+                        <div class="stats">
+                            <i class="fa fa-history"></i> Updated 3 minutes ago
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="card ">
+                    <div class="card-header ">
+                        <h4 class="card-title">Grid service amount(kW)</h4>
+                        <p class="card-category">Live stats</p>
+                    </div>
+                    <div class="card-body">
+                        
+                       <div id="chartHours" class="ct-chart"></div>
                     </div>
                     <div class="card-footer ">
                         <!--<div class="legend">
@@ -210,6 +234,100 @@
                             </div>
                         </div>
                     </div> -->
+        </div>
+        <div class="row">
+            <div class="col-md-4">
+                <div class="card ">
+                    <div class="card-header ">
+                        <h4 class="card-title">Sales</h4>
+                        <p class="card-category">Latest EV Charges</p>
+                    </div>
+                    <div class="card-body ">
+                        <div id="chartActivity" class="ct-chart"></div>
+                    </div>
+                    <div class="card-footer ">
+                        <div class="legend">
+                            <i class="fa fa-circle text-info"></i> EFHQ01
+                            <i class="fa fa-circle text-danger"></i> EFLA01
+                        </div>
+                        <hr>
+                        <div class="stats">
+                            <i class="fa fa-check"></i> Data information certified
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-8">
+                <div class="card strpied-tabled-with-hover">
+                    <div class="card-header ">
+                        <h4 class="card-title">Charging sessions</h4>
+                        <p class="card-category">Latest sessions</p>
+                        <a href="/static/dynamicDB/exportchargingsession-latest.csv" download><i class="nc-icon nc-cloud-download-93"></i> Export CSV</a>
+                    </div>
+                    <div class="card-body table-full-width table-responsive">
+                        <table class="table table-hover table-striped">
+                            <thead>
+                                <th>ID</th>
+                                <th>VEHICLE ID</th>
+                                <th>INCOME</th>
+                                <th>TIME</th>
+                                <th>POWER DISPENSED</th>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>628ed9ca8f0afb31fecaa062</td>
+                                    <td>a06faa71f598</td>
+                                    <td>$10</td>
+                                    <td>Tue, Aug 25th - 19:38</td>
+                                    <td>30 kW</td>
+                                </tr>
+                                <tr>
+                                    <td>62900c546b455b8036a1bf2e</td>
+                                    <td>a06faa71f598</td>
+                                    <td>$12</td>
+                                    <td>Tue, Aug 25th - 19:38</td>
+                                    <td>38 kW</td>
+                                </tr>
+                                <tr>
+                                    <td>629015b46b455b8036a1bf3e</td>
+                                    <td>a06faa71f598</td>
+                                    <td>$10</td>
+                                    <td>Tue, Aug 25th - 19:38</td>
+                                    <td>30 kW</td>
+                                </tr>
+                                <tr>
+                                    <td>62901b906b455b8036a1bf44</td>
+                                    <td>a06faa71f598</td>
+                                    <td>$10</td>
+                                    <td>Tue, Aug 25th - 19:38</td>
+                                    <td>30 kW</td>
+                                </tr>
+                                <tr>
+                                    <td>6290216c6b455b8036a1bf4e</td>
+                                    <td>a06faa71f598</td>
+                                    <td>$10</td>
+                                    <td>Tue, Aug 25th - 19:38</td>
+                                    <td>30 kW</td>
+                                </tr>
+                                <tr>
+                                    <td>62901a646b455b8036a1bf42</td>
+                                    <td>a06faa71f598</td>
+                                    <td>$9</td>
+                                    <td>Tue, Aug 25th - 19:38</td>
+                                    <td>20 kW</td>
+                                </tr>
+                                <tr>
+                                    <td>62901a646b455b8036a1bf42</td>
+                                    <td>a06faa71f598</td>
+                                    <td>$9</td>
+                                    <td>Tue, Aug 25th - 19:38</td>
+                                    <td>20 kW</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
